--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -1,6 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content" 
+    android:orientation="vertical" >
     
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/layout_crongressman_datas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/background_congressman_data" >
+        
+        <!-- Write Instructions Here about the crongressman. -->
+        
+    </LinearLayout>
+    
+    <ScrollView
+        android:id="@+id/scroll_description_screen" 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        
+        <RelativeLayout 
+            android:id="@+id/layout_description_quotas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_white" >
+            
+            <Button
+                android:id="@+id/btn_quota_technical_work_and_consulting"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/quota_technical_work_and_consulting_0" />
+            
+            <Button
+                android:id="@+id/btn_quota_telephony"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/btn_quota_technical_work_and_consulting"
+                android:background="@drawable/quota_telephony_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_postal_services"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_below="@id/btn_quota_technical_work_and_consulting"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:background="@drawable/quota_postal_services_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_issuance_of_air_tickets" 
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_telephony"
+               android:background="@drawable/quota_issuance_of_air_tickets_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_safety"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_postal_services"
+               android:background="@drawable/quota_safety_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_alimentation" 
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_issuance_of_air_tickets"
+               android:background="@drawable/quota_alimentation_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_fuel"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_safety"
+               android:background="@drawable/quota_fuel_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_air_freight"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_alimentation"
+               android:background="@drawable/quota_air_freight_0" />
+            
+            <Button
+               android:id="@+id/btn_quota_office"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_fuel"
+               android:background="@drawable/quota_office_0" />
+
+            <Button
+               android:id="@+id/btn_quota_accommodation"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_air_freight"
+               android:background="@drawable/quota_accommodation_0" />
+
+            <Button
+               android:id="@+id/btn_quota_disclosure_parliamentary_activity"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_office"
+               android:background="@drawable/quota_disclosure_parliamentary_activity_0" />
+            
+        </RelativeLayout>
+    
+    </ScrollView>
+    
+</LinearLayout>
