--- a/res/layout/list_congressmens.xml
+++ b/res/layout/list_congressmens.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
+            android:scaleType="fitXY"
             android:src="@drawable/barra_inferior" />
         
     </RelativeLayout>
