Espaçando botões relacionados às cotas

--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -25,7 +25,7 @@
             android:id="@+id/layout_description_quotas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_white" >
+            android:background="@drawable/background_description_crongressman" >
             
             <Button
                 android:id="@+id/btn_quota_technical_work_and_consulting"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_technical_work_and_consulting"
                 android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_technical_work_and_consulting" />
             
             <Button
@@ -59,13 +59,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_telephony"
                 android:layout_alignLeft="@id/btn_quota_telephony"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_telephony" />
             
             <Button
                android:id="@+id/btn_quota_postal_services"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_below="@id/btn_quota_technical_work_and_consulting"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
                android:background="@drawable/quota_postal_services_0" />
@@ -76,13 +77,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_postal_services"
                 android:layout_alignLeft="@id/btn_quota_postal_services"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_postal_sevices" />
             
             <Button
                android:id="@+id/btn_quota_issuance_of_air_tickets" 
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
                android:layout_below="@id/btn_quota_telephony"
                android:background="@drawable/quota_issuance_of_air_tickets_0" />
@@ -93,13 +95,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_issuance_of_air_tickets"
                 android:layout_alignLeft="@id/btn_quota_issuance_of_air_tickets"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_issuance_of_air_tickets" />
             
             <Button
                android:id="@+id/btn_quota_safety"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
                android:layout_below="@id/btn_quota_postal_services"
                android:background="@drawable/quota_safety_0" />
@@ -110,13 +113,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_safety"
                 android:layout_alignLeft="@id/btn_quota_safety"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_safety" />
             
             <Button
                android:id="@+id/btn_quota_alimentation" 
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
                android:layout_below="@id/btn_quota_issuance_of_air_tickets"
                android:background="@drawable/quota_alimentation_0" />
@@ -127,13 +131,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_alimentation"
                 android:layout_alignLeft="@id/btn_quota_alimentation"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_alimentation" />
             
             <Button
                android:id="@+id/btn_quota_fuel"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
                android:layout_below="@id/btn_quota_safety"
                android:background="@drawable/quota_fuel_0" />
@@ -144,13 +149,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_fuel"
                 android:layout_alignLeft="@id/btn_quota_fuel"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_fuel" />
             
             <Button
                android:id="@+id/btn_quota_air_freight"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
                android:layout_below="@id/btn_quota_alimentation"
                android:background="@drawable/quota_air_freight_0" />
@@ -161,13 +167,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_air_freight"
                 android:layout_alignLeft="@id/btn_quota_air_freight"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_air_freight" />
             
             <Button
                android:id="@+id/btn_quota_office"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
                android:layout_below="@id/btn_quota_fuel"
                android:background="@drawable/quota_office_0" />
@@ -178,13 +185,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_office"
                 android:layout_alignLeft="@id/btn_quota_office"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_office" />
 
             <Button
                android:id="@+id/btn_quota_accommodation"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
                android:layout_below="@id/btn_quota_air_freight"
                android:background="@drawable/quota_accommodation_0" />
@@ -195,13 +203,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_accommodation"
                 android:layout_alignLeft="@id/btn_quota_accommodation"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_accommodation" />
 
             <Button
                android:id="@+id/btn_quota_disclosure_parliamentary_activity"
                android:layout_width="100dp"
                android:layout_height="100dp"
+               android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
                android:layout_below="@id/btn_quota_office"
                android:background="@drawable/quota_disclosure_parliamentary_activity_0" />
@@ -212,7 +221,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_disclosure_parliamentary_activity"
                 android:layout_alignLeft="@id/btn_quota_disclosure_parliamentary_activity"
-                android:layout_marginLeft="31dp"
+                android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_disclosure_parliamentary_activity" />
 
         </RelativeLayout>
