Implementando método setValuesQuotas()

--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -36,7 +36,7 @@
                 android:background="@drawable/quota_technical_work_and_consulting_0" />
             
             <TextView
-                android:id="@+id/txt_value_quota_technical_work_and_consulting"
+                android:id="@+id/txt_quota_technical_work_and_consulting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_technical_work_and_consulting"
@@ -54,7 +54,7 @@
                 android:background="@drawable/quota_telephony_0" />
             
             <TextView 
-                android:id="@+id/txt_value_quota_telephony"
+                android:id="@+id/txt_quota_telephony"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_telephony"
@@ -72,7 +72,7 @@
                android:background="@drawable/quota_postal_services_0" />
             
             <TextView
-                android:id="@+id/txt_value_quota_postal_services"
+                android:id="@+id/txt_quota_postal_services"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_postal_services"
@@ -90,7 +90,7 @@
                android:background="@drawable/quota_issuance_of_air_tickets_0" />
             
             <TextView
-                android:id="@+id/txt_value_issuance_of_air_tickets"
+                android:id="@+id/txt_quota_issuance_of_air_tickets"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_issuance_of_air_tickets"
@@ -108,7 +108,7 @@
                android:background="@drawable/quota_safety_0" />
             
             <TextView
-                android:id="@+id/txt_value_safety"
+                android:id="@+id/txt_quota_safety"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_safety"
@@ -126,7 +126,7 @@
                android:background="@drawable/quota_alimentation_0" />
             
             <TextView
-                android:id="@+id/txt_value_alimentation"
+                android:id="@+id/txt_quota_alimentation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_alimentation"
@@ -144,7 +144,7 @@
                android:background="@drawable/quota_fuel_0" />
             
             <TextView
-                android:id="@+id/txt_value_fuel"
+                android:id="@+id/txt_quota_fuel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_fuel"
@@ -162,7 +162,7 @@
                android:background="@drawable/quota_air_freight_0" />
             
             <TextView
-                android:id="@+id/txt_value_air_freight"
+                android:id="@+id/txt_quota_air_freight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_air_freight"
@@ -180,7 +180,7 @@
                android:background="@drawable/quota_office_0" />
             
             <TextView
-                android:id="@+id/txt_value_office"
+                android:id="@+id/txt_quota_office"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_office"
@@ -198,7 +198,7 @@
                android:background="@drawable/quota_accommodation_0" />
             
             <TextView
-                android:id="@+id/txt_value_accommodation"
+                android:id="@+id/txt_quota_accommodation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_accommodation"
@@ -216,7 +216,7 @@
                android:background="@drawable/quota_disclosure_parliamentary_activity_0" />
             
             <TextView
-                android:id="@+id/txt_value_disclosure_parliamentary_activity"
+                android:id="@+id/txt_quota_disclosure_parliamentary_activity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btn_quota_disclosure_parliamentary_activity"
