--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -27,13 +27,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_description_crongressman" >
             
-            <Button
+            <ImageView
                 android:id="@+id/btn_quota_technical_work_and_consulting"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/quota_technical_work_and_consulting_white" />
+                android:layout_marginTop="10dp" />
             
             <TextView
                 android:id="@+id/txt_quota_technical_work_and_consulting"
@@ -44,14 +43,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_technical_work_and_consulting" />
             
-            <Button
+            <ImageView
                 android:id="@+id/btn_quota_telephony"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@id/btn_quota_technical_work_and_consulting"
-                android:background="@drawable/quota_telephony_white" />
+                android:layout_toRightOf="@id/btn_quota_technical_work_and_consulting" />
             
             <TextView 
                 android:id="@+id/txt_quota_telephony"
@@ -62,14 +60,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_telephony" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_postal_services"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/btn_quota_technical_work_and_consulting"
-               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
-               android:background="@drawable/quota_postal_services_white" />
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting" />
             
             <TextView
                 android:id="@+id/txt_quota_postal_services"
@@ -80,14 +77,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_postal_sevices" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_issuance_of_air_tickets" 
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
-               android:layout_below="@id/btn_quota_telephony"
-               android:background="@drawable/quota_issuance_of_air_tickets_white" />
+               android:layout_below="@id/btn_quota_telephony" />
             
             <TextView
                 android:id="@+id/txt_quota_issuance_of_air_tickets"
@@ -98,14 +94,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_issuance_of_air_tickets" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_safety"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
-               android:layout_below="@id/btn_quota_postal_services"
-               android:background="@drawable/quota_safety_white" />
+               android:layout_below="@id/btn_quota_postal_services" />
             
             <TextView
                 android:id="@+id/txt_quota_safety"
@@ -116,14 +111,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_safety" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_alimentation" 
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
-               android:layout_below="@id/btn_quota_issuance_of_air_tickets"
-               android:background="@drawable/quota_alimentation_white" />
+               android:layout_below="@id/btn_quota_issuance_of_air_tickets" />
             
             <TextView
                 android:id="@+id/txt_quota_alimentation"
@@ -134,14 +128,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_alimentation" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_fuel"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
-               android:layout_below="@id/btn_quota_safety"
-               android:background="@drawable/quota_fuel_white" />
+               android:layout_below="@id/btn_quota_safety" />
             
             <TextView
                 android:id="@+id/txt_quota_fuel"
@@ -152,14 +145,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_fuel" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_air_freight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
-               android:layout_below="@id/btn_quota_alimentation"
-               android:background="@drawable/quota_air_freight_white" />
+               android:layout_below="@id/btn_quota_alimentation" />
             
             <TextView
                 android:id="@+id/txt_quota_air_freight"
@@ -170,14 +162,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_air_freight" />
             
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_office"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
-               android:layout_below="@id/btn_quota_fuel"
-               android:background="@drawable/quota_office_white" />
+               android:layout_below="@id/btn_quota_fuel" />
             
             <TextView
                 android:id="@+id/txt_quota_office"
@@ -188,14 +179,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_office" />
 
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_accommodation"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_telephony"
-               android:layout_below="@id/btn_quota_air_freight"
-               android:background="@drawable/quota_accommodation_white" />
+               android:layout_below="@id/btn_quota_air_freight" />
             
             <TextView
                 android:id="@+id/txt_quota_accommodation"
@@ -206,14 +196,13 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_accommodation" />
 
-            <Button
+            <ImageView
                android:id="@+id/btn_quota_disclosure_parliamentary_activity"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
-               android:layout_below="@id/btn_quota_office"
-               android:background="@drawable/quota_disclosure_parliamentary_activity_white" />
+               android:layout_below="@id/btn_quota_office" />
             
             <TextView
                 android:id="@+id/txt_quota_disclosure_parliamentary_activity"
