--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:orientation="vertical" >
     
     <LinearLayout
         android:id="@+id/layout_crongressman_datas"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/background_congressman_data" >
         
         <!-- Write Instructions Here about the crongressman. -->
+        
+          <TextView
+            android:id="@+id/congressman_txt_nome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            
+            android:textColor="#536571"
+            android:text="nome" />
         
     </LinearLayout>
     
