--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -4,25 +4,87 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:orientation="vertical" >
-    
-    <LinearLayout
+
+    <RelativeLayout
         android:id="@+id/layout_crongressman_datas"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/background_congressman_data" >
-        
-        <!-- Write Instructions Here about the crongressman. -->
-        
-          <TextView
+        android:background="@drawable/background_congressman_data"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/description_ranking_imagem_parlamentar"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/parlamentar_foto_mini"
+            android:maxHeight="64px"
+           android:maxWidth="64px" />
+
+        <TextView
             android:id="@+id/congressman_txt_nome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
+            android:layout_below="@+id/description_ranking_imagem_parlamentar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:text="nome"
             android:textColor="#536571"
-            android:text="nome" />
-        
-    </LinearLayout>
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/congressman_txt_partido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/congressman_txt_nome"
+            android:layout_centerHorizontal="true"
+            android:text="Partido"
+            android:textColor="#536571"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/btn_follow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/congressman_txt_nome"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="23dp"
+            android:background="@drawable/seguidos_desativado" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/description_ranking_position"
+            android:layout_alignBottom="@+id/description_ranking_position"
+            android:layout_toRightOf="@+id/description_ranking_position"
+            android:text="º"
+            android:textColor="#000033"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/congressman_txt_nome"
+            
+            android:layout_marginLeft="25dp"
+            android:text="Lugar"
+            android:textColor="#000033"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/description_ranking_position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/position"
+            android:text="100"
+            android:layout_marginLeft="30dp"
+            android:textColor="#000033"
+            android:textSize="20dp" />
+
+    </RelativeLayout>
     
     <ScrollView
         android:id="@+id/scroll_description_screen" 
