--- a/res/layout/congressmen_list_layout.xml
+++ b/res/layout/congressmen_list_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@drawable/barra_extendida"
+    android:background="@drawable/extended_bar"
     android:orientation="horizontal"
     android:clickable="false"
 	android:descendantFocusability="blocksDescendants"
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/parlamentar_foto_mini" />
+            android:src="@drawable/default_photo" />
 
     </RelativeLayout>
 
