--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -18,7 +18,7 @@
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
-            android:src="@drawable/parlamentar_foto_mini"
+            android:src="@drawable/default_photo"
             android:maxHeight="64px"
            android:maxWidth="64px" />
 
